# OrionRAG

./: .env.example  .gitignore  COMMANDS.md  Makefile  README.md  STATUS.md  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  documents.py  search.py  upload.py
backend/app/core/: database.py
backend/app/models/: api.py  sql.py
backend/app/services/: document_processor.py  gemini_client.py  vector_store.py
backend/app/utils/: chunking.py  evaluation.py  validators.py
backend/tests/: test_advanced_rag.py  test_rerank_eval.py
docker/: docker-compose.yml
docker/init-scripts/: init-db.sql
docs/: advanced_rag_techniques.md  code_quality.md  component_structure.md  testing_guide.md
